[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "omnihistoria"
version = "0.1.0"
description = "Foundational components for the OmniHistoria knowledge graph and prompt generation pipeline"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OmniHistoria" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
omnihistoria = "omnihistoria.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
